# sile-rust

./: .gitignore  CLAUDE.md  Cargo.toml  GRAPHITE_BUNDLED_PLAN.md  HARFBUZZ_NATIVE_PLAN.md  PERFORMANCE_REPORT.md  PLAN.md  RUST_IDIOMS_REPORT.md  RUST_PORT_PLAN.md
sile-cli/: Cargo.toml
sile-cli/src/: main.rs
sile-core/: Cargo.toml
sile-core/src/: builder.rs  color.rs  font.rs  frame.rs  harfbuzz_ffi.rs  hyphenation.rs  length.rs  lib.rs  linebreak.rs  measurement.rs  node.rs  pagebuilder.rs  pdf.rs  shaper.rs  shaper_harfbuzz.rs  svg.rs
